--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,8 @@
 Package: psy
 Title: Various procedures used in psychometry
-Date: 2003-08-18
-Version: 0.5
+Version: 0.6
 Author: Bruno Falissard
 Description: Kappa, ICC, Cronbach alpha, screeplot, PCA and related methods
 Maintainer: Bruno Falissard <falissard_b@wanadoo.fr>
 License: GPL
-Depends: R (>= 1.3.0)
+Packaged: Fri Apr 23 11:14:49 2004; Bruno
