--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: psy
 Title: Various procedures used in psychometry
-Version: 0.6
+Version: 0.7
 Author: Bruno Falissard
-Description: Kappa, ICC, Cronbach alpha, screeplot, PCA and related methods
+Description: Kappa, ICC, Cronbach alpha, screeplot, PCA, biplots, non linear mapping and related methods
 Maintainer: Bruno Falissard <falissard_b@wanadoo.fr>
 License: GPL
-Packaged: Fri Apr 23 11:14:49 2004; Bruno
+Packaged: Mon Jun 27 13:12:55 2005; hornik
