--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,13 @@
 Package: psy
+Type: Package
 Title: Various procedures used in psychometry
-Version: 0.65
+Version: 1.0
+Date: 2009-12-23
 Author: Bruno Falissard
-Description: Kappa, ICC, Cronbach alpha, screeplot, PCA, biplots, non linear mapping and related methods
 Maintainer: Bruno Falissard <falissard_b@wanadoo.fr>
-License: GPL
-Packaged: Sun Apr 24 19:06:34 2005; Bruno
+Description: Kappa, ICC, Cronbach alpha, screeplot, mtmm
+License: GPL (>= 2)
+LazyLoad: yes
+Packaged: 2009-12-23 16:37:38 UTC; Bruno
+Repository: CRAN
+Date/Publication: 2009-12-24 10:42:14
