--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: psy
 Type: Package
 Title: Various procedures used in psychometry
-Version: 1.0
-Date: 2009-12-23
+Version: 1.1
+Date: 2012-06-11
 Author: Bruno Falissard
 Maintainer: Bruno Falissard <falissard_b@wanadoo.fr>
 Description: Kappa, ICC, Cronbach alpha, screeplot, mtmm
 License: GPL (>= 2)
 LazyLoad: yes
-Packaged: 2009-12-23 16:37:38 UTC; Bruno
+Packaged: 2012-06-14 09:35:19 UTC; GENOLLINI
 Repository: CRAN
-Date/Publication: 2009-12-24 10:42:14
+Date/Publication: 2012-06-21 07:43:10
